--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "starter-express-api",
+  "name": "me-cap",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.py",
   "scripts": {
-    "start": "node index.js"
+    "start": "node main.py"
   },
   "repository": {
     "type": "git",
